# Blackwall

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEMO_HARNESS_ARCHITECTURE.md  DEPRECATIONS_AND_WARNINGS.md  Dockerfile  JUDGE_EVALUATION.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  SUBMISSION_CHECKLIST.md  demo_live.py  errors_to_be_fixed.md  pyproject.toml
.macroscope/: review-agent.md
agent/: __init__.py
config/: policy.yaml  policy_template.yaml
docs/adr/: 0001-audit-hooks-db-access.md  0002-gti-rate-limit-secondary-validation.md
grafana/dashboards/: blackwall-observability.json
scripts/: build_evalset.py  mock_app.py  run_demo.sh  run_evasion_eval.sh  run_evasion_eval_free.sh  run_rogue.py  verify_no_polling.py
src/blackwall/: __init__.py  adk_integration.py  analytics.py  exceptions.py  interception.py  logging.py  models.py  resolver.py  sync_resolver.py  telemetry.py
src/prompts/: blackwall_system.md  few_shot_seeds.json
tests/: conftest.py  test_analytics.py  test_batch_resolver.py  test_eval_metrics.py  test_logging.py  test_mcp_routing.py  test_mcp_routing_integration.py  test_observability.py  test_sync_resolver.py
tests/audit/: test_manager.py
tests/db/: test_eviction_manager.py  test_repository.py  test_repository_similarity.py
tests/eval/: eval_config.json  eval_config_evasion.json  test_report_generator.py
tests/evals/: test_enterprise_weave_evals.py
tests/features/: adk_interception.feature  audit_hook_enforcement.feature  batch_resolver.feature  blackwall_enterprise_mesh.feature  blackwall_guardrails.feature  fail_closed_rate_limit.feature  os_auditing.feature  threat_learning.feature  zero_ambient_authority.feature
tests/integration/: test_adk_integration.py  test_checkpoint_18.py  test_demo_harness.py  test_integration_background_task.py  test_pipeline_checkpoint.py
tests/mcp/: test_codebase_memory.py  test_gti_budget_tracker.py
tests/middleware/: test_context_hygiene.py  test_context_hygiene_properties.py
tests/models/: test_models.py
tests/step_defs/: test_batch_resolver_bdd.py  test_enterprise_mesh.py  test_guardrail_stubs.py  test_guardrails.py  test_zero_ambient_authority.py
tests/unit/: test_BackgroundTaskSubmitter.py  test_embeddings.py  test_event_driven_invariant.py  test_falco_mcp.py  test_forensic_fallback.py  test_forensic_manager.py  test_hybrid_policy_server.py  test_identity_sidecar.py  test_interception_queue.py  test_kernel_probe.py  test_ollama_forensics.py  (+9 more)
(+78 files in other folders)
