[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackwall"
version = "0.1.0"
description = "Blackwall Agentic Firewall"
readme = "README.md"
requires-python = ">=3.11.0"
dependencies = [
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "structlog>=24.1.0",
    "pyyaml>=6.0",
    "watchdog>=4.0.0",
    "aiohttp>=3.9.0",
    "certifi>=2024.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-otlp>=1.24.0",
    "opentelemetry-exporter-prometheus>=0.45b0,<0.46",
    "prometheus-client>=0.20.0",
    "google-genai>=0.1.0",
    "cryptography>=42.0.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-bdd>=8.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.3.0",
    "black>=24.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0"
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
